simple-rest-api/k8s-deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-rest-api
  namespace: hegdek8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-rest-api
  template:
    metadata:
      labels:
        app: simple-rest-api
    spec:
      containers:
      - name: simple-rest-api
        image: ninadhegde/hegde_tech:simple-rest-api
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
  namespace: hegdek8s
spec:
  selector:
    app: simple-rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
